# Ascend-CANN

./: .env.example  README.md  README_zh-CN.md  astro.config.mjs  package.json  pnpm-lock.yaml
src/assets/codes/ch01/VectorAdd/: CMakeLists.txt  VectorAdd.cpp  main.cpp  run.sh
src/content/docs/: index.md
src/content/docs/ch01/: 第01篇-昇腾CANN算子库全景概览.md  第02篇-CANN算子开发通用架构与工程实践.md
src/content/docs/ch02/: ops-transformer.md  第03篇-ops-transformer(上)-Transformer模型的高性能算子实现.md  第03篇-ops-transformer(下)-Transformer模型的高性能算子实现.md  第04篇-ops-nn(上)-神经网络基础算子的优化艺术.md  第04篇-ops-nn(下)-神经网络基础算子的优化艺术.md  第05篇-ops-math-数学运算的极致优化.md  第06篇-ops-cv(上)-计算机视觉算子的硬件加速.md  第06篇-ops-cv(下)-计算机视觉算子的硬件加速.md  第07篇-atvoss(上)-AI Vision优化的模板化编程模型.md  第07篇-atvoss(上)-ai-vision优化的模板化编程模型.md  第07篇-atvoss(下)-AI Vision优化的模板化编程模型.md  第07篇-atvoss(下)-ai-vision优化的模板化编程模型.md
src/content/docs/ch03/: 第08篇-Tiling机制与内存管理深度解析.md  第09篇-异步编程与并行计算在CANN中的应用.md  第10篇-量化技术与混合精度计算实践.md  第11篇-算子性能调优与实战指南.md
src/content/docs/guides/: example.md
src/content/docs/reference/: example.md
